frontend/test/should_fail/mapset_002.grg
using mapset_model;

test mapset {
	a:A;
	
	if { 
		a.strVal in (a.intToStr.range() & a.strToInt.range());
	}
}

